--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -30,7 +30,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 |0.3
 |15/Jan<br />2018
 |[[https://github.com/Pireo/hello-world/blob/master/flag_united_kingdom.png]]
-|[https://raw.githubusercontent.com/solenskiner/search-plugins/master/nova3/engines/academictorrents.py Download]
+|[https://raw.githubusercontent.com/solenskiner/search-plugins/master/nova3/engines/academictorrents.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 |Python3<br />✔ qbt 4.0.x
 |-
 | [[https://raw.githubusercontent.com/hannsen/qbittorrent_search_plugins/master/ali213.png]] [http://down.ali213.net/ ali213.net]
@@ -254,7 +254,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 !  Ver.
 !  Update
 !  Lang.
-!  Download
+!  Links
 !  Comment
 |-
 | [[https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/bakabt.png]] [https://bakabt.me BakaBT]
