--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -23,7 +23,7 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | [https://raw.githubusercontent.com/v1k45/1337x-qBittorrent-search-plugin/master/leetx.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3<br />✔ qbt 4.0.x
 |-
-|[http://academictorrents.com/ Academic Torrents]
+|[[https://github.com/Pireo/hello-world/blob/master/MA_Icon_Graduation.png]] [http://academictorrents.com/ Academic Torrents]
 |[https://github.com/solenskiner/search-plugins solenskiner]
 |0.3
 |15/Jan<br />2018
