--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -206,12 +206,12 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | [https://raw.githubusercontent.com/BrunoReX/qBittorrent-Search-Plugin-TokyoToshokan/master/tokyotoshokan.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3<br />✔ qbt 4.0.x
 |-
-| [[https://raw.githubusercontent.com/davy39/qbfrench/master/torrent9.png]] [http://www.torrent9.cc/ Torrent9]
-| [https://github.com/davy39/qbfrench davy39]
-| 1.10
-| 11/Aug<br />2016
-| [https://raw.githubusercontent.com/davy39/qbfrench/master/torrent9.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
-| Python2 & Python3<br />✖ Not Working
+| [[https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/torrent9.png]] [http://www.torrent9.ec/ Torrent9]
+| [https://github.com/CravateRouge/qBittorrentSearchPlugins CravateRouge]
+| 2.00
+| 26/Jun<br />2018
+| [https://raw.githubusercontent.com/CravateRouge/qBittorrentSearchPlugins/master/torrent9.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> [https://github.com/CravateRouge/qBittorrentSearchPlugins/blob/master/README.md [[https://github.com/Pireo/hello-world/blob/master/Help%20book.gif]] ]
+| Python3<br />✔ qbt 4.1.1
 |-
 | [https://www.torrentfunk.com/ TorrentFunk]
 | [https://github.com/ebukari Ezekiel N Bukari]
