--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -68,14 +68,14 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | [[https://www.google.com/s2/favicons?domain=eztv.ag#.png]] [https://www.eztv.ag/ EZTV]
 | [https://github.com/nindogo Ni Ndogo]
 | 0.2
-| 1/Jul/18
+| 1/July 2018
 | [https://github.com/nindogo/qbtSearchScripts/raw/master/eztv.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python3<br />✔ qbt 4.1.x
 |-
 | [[https://www.google.com/s2/favicons?domain=idope.se#.png]] [https://www.idope.se/ iDope]
 | [https://github.com/nindogo Ni Ndogo]
-| 0.5
-| 1/Jul/18
+| 0.7
+| 12/July 2018
 | [https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/idope.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python3<br />✔ qbt 4.1.x
 |-
