Add DMHY plugin

--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -65,6 +65,13 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | [https://raw.githubusercontent.com/hannsen/qbittorrent_search_plugins/master/demonoid.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> 
 | Python2 & Python3<br />✔ qbt 4.0.x
 |-
+| [[https://i.imgur.com/2QEr3r0.png]] [https://share.dmhy.org/ DMHY]
+| [https://github.com/xyauhideto/DMHY_qBittorrent_search_plugin xyauhideto]
+| 1.0
+| 23/July<br />2018
+| [https://github.com/xyauhideto/DMHY_qBittorrent_search_plugin/raw/master/dmhyorg.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]<br /> 
+| Python3<br />✔ qbt 4.1.x
+|-
 | [[https://www.google.com/s2/favicons?domain=eztv.ag#.png]] [https://www.eztv.ag/ EZTV]
 | [https://github.com/nindogo Ni Ndogo]
 | 0.2
