--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -93,8 +93,9 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/ilcorsaronero.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
 | Python2 & Python3<br />✖ Not Working
 |-
-| [[https://goo.gl/images/aBALFk]] [https://kickass-cr.online/ Kickass Torrent]
-| [https://github.com/MaurizioRicci/qBittorrent_search_engine]
+| [[https://github.com/MaurizioRicci/qBittorrent_search_engine/blob/master/kickass_icon.png]]
+ [https://kickass-cr.online/ Kickass Torrent]
+| [https://github.com/MaurizioRicci/qBittorrent_search_engine Maurizio Ricci]
 | 1.0
 | 12/Aug<br />2018
 | [https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engine/master/kickass_torrent.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
