--- a/Unofficial-search-plugins.mediawiki
+++ b/Unofficial-search-plugins.mediawiki
@@ -118,11 +118,11 @@ Here you can find unofficial search engine plugins for qBittorrent that are made
 | Python2 & Python3<br />✔ qbt 4.1.x+
 |-
 | [[https://github.com/Pireo/hello-world/blob/master/lime.png]] [https://www.limetorrents.cc/ LimeTorrents]
-| [https://github.com/lima66/Torrents_Plugin/ lima66]
-| 3.09
-| 22/July<br />2017
-| [https://raw.githubusercontent.com/lima66/Torrents_Plugin/master/limetorrents.py [[https://github.com/Pireo/hello-world/blob/master/Download.gif]] ]
-| Python2 & Python3<br />✔ qbt 4.0.x
+| [https://github.com/qbittorrent/search-plugins Official support]
+| 
+| 
+| 
+| Python2 & Python3<br />✔ qbt 4.1.x
 |-
 | [[https://raw.githubusercontent.com/Pireo/hello-world/master/tux.png]] [http://linuxtracker.org/ Linux Tracker]
 | [https://github.com/MadeOfMagicAndWires/qBit-plugins Made Of Magic<br />And Wires]
